fix layout issue of tile numbers when hiding buttons

--- a/css/main.css
+++ b/css/main.css
@@ -24,5 +24,5 @@
 .game_element {
     display: none;
     height: 100%;
-    line-height: 100px;
+    line-height: 50px;
 }
